<resources>
    <string name="app_name">AuthApp</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register_user">REGISTER USER</string>
    <string name="my_first_login_app">MY FIRST LOGIN APP</string>
    <string name="checking_phase">checking phase</string>
    <string name="SIGN_OUT">SIGN OUT</string>
    <string name="WELCOME">WELCOME</string>
</resources>